Bugs startscreen style (#38)
* Fixed startscreen overflowing by assigning grid-area all

* Centered gamesWrapper by margin auto

--- a/src/components/Startscreen/GameList.module.scss
+++ b/src/components/Startscreen/GameList.module.scss
@@ -2,6 +2,7 @@
 
 .gamesWrapper {
   padding: 100px;
+  margin: auto;
 
   display: grid;
   grid-auto-columns: 1fr;
